# qiskit-pasqal-provider

./: .buildinfo  .gitignore  .pylintrc  .travis.yml  INSTALL.md  README.md  ecosystem.json  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/apidocs/: index.doctree  qpp.doctree  template.doctree
.doctrees/how_tos/: example_how_to.doctree  index.doctree
.doctrees/nbsphinx/tutorials/: introduction_to_qpp.ipynb  openqasm3_transport_roundtrip.ipynb  qubo_with_qpp.ipynb
.doctrees/stubs/: prototype_template.template_module.TemplateClass.doctree  qiskit_pasqal_provider.providers.HamiltonianGate.doctree  qiskit_pasqal_provider.providers.PasqalProvider.doctree  qiskit_pasqal_provider.providers.Sampler.doctree  qiskit_pasqal_provider.providers.SamplerV2.doctree  qiskit_pasqal_provider.providers.dumps_qpp_openqasm3.doctree  qiskit_pasqal_provider.providers.loads_qpp_openqasm3.doctree
.doctrees/tutorials/: example_tutorial.doctree  index.doctree  introduction_to_qpp.doctree  openqasm3_transport_roundtrip.doctree  qubo_with_qpp.doctree
.github/workflows/: citation.yml  coverage.yml  docs.yml  ecosystem.yml  lint.yml  publish.yml  test-linux.yml  test-mac.yml  test-unix.yml  test-windows.yml  test_latest_versions.yml
_modules/: index.html
_modules/qiskit_pasqal_provider/providers/: gate.html  provider.html  sampler.html
_sources/: index.rst.txt
_sources/apidocs/: index.rst.txt  qpp.rst.txt
_sources/stubs/: qiskit_pasqal_provider.providers.HamiltonianGate.rst.txt  qiskit_pasqal_provider.providers.PasqalProvider.rst.txt  qiskit_pasqal_provider.providers.Sampler.rst.txt  qiskit_pasqal_provider.providers.SamplerV2.rst.txt  qiskit_pasqal_provider.providers.dumps_qpp_openqasm3.rst.txt  qiskit_pasqal_provider.providers.loads_qpp_openqasm3.rst.txt
_sources/tutorials/: introduction_to_qpp.ipynb.txt  openqasm3_transport_roundtrip.ipynb.txt
apidocs/: index.html  qpp.html
docs/: conf.py  index.rst  project_overview.md  quickstart_guide.md  technical_docs.md
docs/apidocs/: qpp.rst
docs/tutorials/: introduction_to_qpp.ipynb  openqasm3_transport_roundtrip.ipynb  qubo_with_qpp.ipynb
how_tos/: example_how_to.ipynb
qiskit_pasqal_provider/: __init__.py  exception.py  utils.py  version.py
qiskit_pasqal_provider/providers/: __init__.py  abstract_base.py  backend_base.py  gate.py  job_base.py  jobs.py  pasqal_backend.py  pasqal_devices.py  pasqal_job.py  pasqal_layout.py  pasqal_schedule.py  pasqal_target.py  pasqal_utils.py  provider.py  pulse_utils.py  remote.py  result.py  sampler.py  target.py
qiskit_pasqal_provider/providers/backends/: __init__.py  emu_free.py  emu_mps.py  emu_remote.py  emu_tn.py  local.py  pasqal_cloud.py  qpu.py  qutip.py  remote.py
stubs/: qiskit_pasqal_provider.providers.HamiltonianGate.html  qiskit_pasqal_provider.providers.PasqalProvider.html  qiskit_pasqal_provider.providers.Sampler.html  qiskit_pasqal_provider.providers.SamplerV2.html  qiskit_pasqal_provider.providers.dumps_qpp_openqasm3.html  qiskit_pasqal_provider.providers.loads_qpp_openqasm3.html
technical_diagrams/: qiskit-pasqal-provider_diagrams.drawio
tests/: __init__.py  conftest.py  test_backends.py  test_conversion.py  test_device.py  test_e2e.py  test_gate.py  test_job.py  test_provider.py  test_result.py  test_sampler.py  test_target.py
tutorials/: example_tutorial.ipynb  index.html  introduction_to_qpp.html  introduction_to_qpp.ipynb  openqasm3_transport_roundtrip.html  qubo_with_qpp.html  qubo_with_qpp.ipynb
