# file pyproject.toml

[project]
name = "qiskit_pasqal_provider"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE.txt"}
description = "Qiskit Pasqal provider."
authors = [
   { name = "My Name", email = "my.email@email.net"},
]

dependencies = [
    "certifi",
    "importlib_metadata",
    "qiskit-aer",
    "qiskit<2",
    "pulser-core<2",
    "pulser-simulation<2",
    "pasqal-cloud",
    "pulser-pasqal",
    "emu-mps",
]

[project.optional-dependencies]
# Dev dependencies.
dev = [
    "coverage",
    "pylint",
    "nbqa",
    "treon",
    "pytest",
    "pytest-randomly",
    "mypy",
    "mypy-extensions",
    "jupyter-sphinx",
    "nbsphinx",
    "sphinx-autodoc-typehints",
    "qiskit-sphinx-theme",
    "reno",
]

[project.urls]
"Homepage" = "https://github.com/qiskit-community/quantum-prototype-template"
"Bug Tracker" = "https://github.com/qiskit-community/quantum-prototype-template/issues"

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "toml",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ['qiskit_pasqal_provider*']
exclude = ['qiskit_pasqal_provider*tests', 'demo']
