# file pyproject.toml

[project]
name = "qiskit_pasqal_provider"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE.txt"}
description = "Qiskit Pasqal provider."
authors = [
   { name = "My Name", email = "my.email@email.net"},
]

dependencies = [
    "certifi>=2024.12.1",
    "importlib_metadata>=8.1.1",
    "qiskit-aer>=0.15.0",
    "qiskit>=1.4, <2",
    "pulser-core>=1.4, <2",
    "pulser-simulation>=1.0, <2",
    "pasqal-cloud>=0.12.7",
    "pulser-pasqal>=0.20",
    "emu-mps",
]

[project.optional-dependencies]
# Dev dependencies.
dev = [
    "coverage>=7.8.0",
    "pylint>=3.3.0",
    "nbqa>=1.9",
    "treon>=0.1.3",
    "pytest>=8.3.0",
    "pytest-randomly>=3.16.0",
    "mypy>=1.14",
    "mypy-extensions>=1.0.0",
    "jupyter-sphinx>=0.5.2",
    "nbsphinx>=0.9.0",
    "sphinx-autodoc-typehints>=2.3.0",
    "qiskit-sphinx-theme==1.16.1",
    "reno>=4.1.0",
    # Black's formatting rules can change between major versions, so we use
    # the ~= specifier for it.
    "black[jupyter]~=24.10",
]

[project.urls]
"Homepage" = "https://github.com/qiskit-community/quantum-prototype-template"
"Bug Tracker" = "https://github.com/qiskit-community/quantum-prototype-template/issues"

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "toml",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ['qiskit_pasqal_provider*']
exclude = ['qiskit_pasqal_provider*tests', 'demo']
